--- a/ReactNativeApp/package.json
+++ b/ReactNativeApp/package.json
@@ -9,13 +9,20 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/webpack-config": "^18.0.1",
     "expo": "~48.0.6",
-    "expo-status-bar": "~1.4.4",
+    "expo-font": "~11.1.1",
+    "expo-splash-screen": "^0.18.1",
+    "link": "^1.5.1",
     "react": "18.2.0",
-    "react-native": "0.71.3"
+    "react-dom": "^18.2.0",
+    "react-native": "0.71.4",
+    "react-native-vector-icons": "^9.2.0",
+    "react-native-web": "^0.18.12"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "babel-preset-expo": "^9.3.0"
   },
   "private": true
 }
