--- a/ReactNativeApp/package.json
+++ b/ReactNativeApp/package.json
@@ -9,14 +9,14 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/webpack-config": "^18.0.1",
-    "expo": "~48.0.6",
-    "expo-font": "~11.1.1",
-    "expo-splash-screen": "^0.18.1",
+    "@expo/webpack-config": "^0.17.2",
+    "expo": "~47.0.5",
+    "expo-font": "~11.0.1",
+    "expo-splash-screen": "~0.17.5",
     "link": "^1.5.1",
-    "react": "18.2.0",
-    "react-dom": "^18.2.0",
-    "react-native": "0.71.4",
+    "react": "18.1.0",
+    "react-dom": "18.1.0",
+    "react-native": "0.70.5",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "^0.18.12"
   },
