--- a/ReactNativeApp/package.json
+++ b/ReactNativeApp/package.json
@@ -24,7 +24,10 @@
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
     "react-native-vector-icons": "^9.2.0",
-    "react-native-web": "^0.18.12"
+    "react-native-web": "^0.18.12",
+    "expo-camera": "~13.1.0",
+    "expo-location": "~15.0.1",
+    "react-native-maps": "1.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
