--- a/ReactNativeApp/package.json
+++ b/ReactNativeApp/package.json
@@ -19,6 +19,7 @@
     "expo-font": "~11.0.1",
     "expo-location": "~15.0.1",
     "expo-splash-screen": "~0.17.5",
+    "expo-updates": "^0.16.3",
     "firebase": "^9.18.0",
     "link": "^1.5.1",
     "react": "18.1.0",
